--- a/home.html
+++ b/home.html
@@ -38,8 +38,8 @@
         <div class="main__container">
             <div class="main__content">
                 <h1>YOLO HOMES</h1>
-                <h2>THE BEST IN THE GAME</h2>
-                <p>Find your dream home today   .</p>
+                <h2>YOUR OPTIMAL LIVING OPTION</h2>
+                <p>Find your dream home with us today.</p>
                 <button class="main__btn">
                     <a href="/">Get Started</a>
                 </button>
