--- a/services.html
+++ b/services.html
@@ -1,1 +1,42 @@
-<p>Run Away</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="services.css">
+</head>
+
+
+<body>
+<div class="content">
+    <div class="head">
+        <h1>OUR SERVICES</h1> 
+        <p>DEDICATED TO GIVING YOU THE BEST OPTION FOR YOUR BUDGET</p>
+    </div>
+    <div class="boxes"><div class="box1"><center><h4>Property Listings</h4>
+        Explore a wide range of residential and commercial properties available for sale or rent.
+        </center>
+      </div> 
+      <div class="box2"><center><h4>Market Analysis</h4>
+        Get detailed market insights and property valuations to help you make informed decisions.
+        </center></div>
+      <div class="box3"><center><h4>Property Management</h4>
+        We offer property management services including tenant screening, rent collection, and maintenance.</center></div>
+      <div class="box4"><center><h4>Market Analysis</h4>
+        Get detailed market insights and property valuations to help you make informed decisions.</center></div>
+      <div class="box5"><center><h4>Mortgage Assistance</h4>
+        Our experts help you navigate the mortgage process and find the best financing options.
+        </center></div>
+      <div class="box6"><center><h4>Legal Consulting</h4>
+        We provide legal guidance on real estate transactions, contracts, and property laws.</center></div>
+      <div class="box7"><center><h4>Property Management</h4>
+        We offer property management services including tenant screening, rent collection, and maintenance.</center></div>
+     
+    </div> 
+</div>
+    <footer>
+        Worked on by Nwabueze Prince (23/2014) and Michael Kwashie (23/0693)
+    </footer>
+</body>
+</html>
