--- a/home.html
+++ b/home.html
@@ -24,10 +24,10 @@
                     <a href="services.html" class="navbar__links"> Services </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links"> Contact Us </a>
+                    <a href="contactus.html" class="navbar__links"> Contact Us </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links"> About Us </a>
+                    <a href="aboutus.html" class="navbar__links"> About Us </a>
                 </li>
             </ul>
         </div>
@@ -50,6 +50,9 @@
         </div>                                                                                                                                
     </div>
 
+    <footer>
+        Worked on by Udeme Okon (23/2873)
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
