--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="class.css">
+    <link rel="stylesheet" href="aboutus.css">
 </head>
 
 <body>
@@ -50,5 +50,9 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        Worked on by Victor (23/1305) and Maleeq (23/2126)
+    </footer>
 </body>
 </html>
