--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                 <h2>YOUR OPTIMAL LIVING OPTION</h2>
                 <p>Find your dream home with us today.</p>
                 <button class="main__btn">
-                    <a href="/">Get Started</a>
+                    <a href="getstarted.html">Get Started</a>
                 </button>
             </div>
             <div class="main__img--container">
